# HEonGPU

example/lowmem_resnet20_slot/: CMakeLists.txt  DebugDumper.h  LowMemAdapter.h  PlainSimAdapter.h  Utils.h  debug_convbn_initial.cu  lowmem_resnet20_plain_sim.cpp  lowmem_resnet20_slot.cu
src/include/heongpu/kernel/: defines.h
src/lib/kernel/: keygeneration.cu
